--- a/2022/day15.ipynb
+++ b/2022/day15.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "id": "ef07be83",
    "metadata": {},
    "outputs": [
@@ -24,68 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "id": "329837b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(array([3797530, 3451192]), array([3316341, 3328308]), 604073),\n",
-       " (array([3779164,   33938]), array([4608350,  708806]), 1504054),\n",
-       " (array([1331810, 3260896]), array([2075597, 3280016]), 762907),\n",
-       " (array([393374, 696899]), array([2021690,  453306]), 1871909),\n",
-       " (array([2928048,  923094]), array([2021690,  453306]), 1376146),\n",
-       " (array([2386726, 3645023]), array([2075597, 3280016]), 676136),\n",
-       " (array([1900159, 2381031]), array([1649961, 2000000]), 631229),\n",
-       " (array([2601378, 2979844]), array([2218962, 2701963]), 660297),\n",
-       " (array([2254818,   32199]), array([2021690,  453306]), 654235),\n",
-       " (array([2689643,  375840]), array([2021690,  453306]), 745419),\n",
-       " (array([ 909141, 2842547]), array([2218962, 2701963]), 1450405),\n",
-       " (array([3915731, 2454320]), array([4268501, 1853073]), 954017),\n",
-       " (array([1693574, 1344104]), array([1649961, 2000000]), 699509),\n",
-       " (array([1760260, 3297662]), array([2075597, 3280016]), 332983),\n",
-       " (array([1909567, 3990737]), array([2075597, 3280016]), 876751),\n",
-       " (array([2097863, 3179766]), array([2075597, 3280016]), 122516),\n",
-       " (array([3100489, 3623847]), array([3104748, 4102403]), 482815),\n",
-       " (array([2746023, 2432826]), array([2218962, 2701963]), 796198),\n",
-       " (array([3031245, 3031354]), array([3316341, 3328308]), 582050),\n",
-       " (array([ 277094, 1999350]), array([1649961, 2000000]), 1373517),\n",
-       " (array([1763269,  126349]), array([2021690,  453306]), 585378),\n",
-       " (array([3287624, 2695420]), array([3316341, 3328308]), 661605),\n",
-       " (array([2371102, 1745103]), array([1649961, 2000000]), 976038),\n",
-       " (array([3553438, 1563379]), array([4268501, 1853073]), 1004757),\n",
-       " (array([1529129, 2735122]), array([2218962, 2701963]), 722992),\n",
-       " (array([2826220, 3958350]), array([3104748, 4102403]), 422581),\n",
-       " (array([3999334, 3912693]), array([3104748, 4102403]), 1084296),\n",
-       " (array([ 240430, 3829436]), array([-742036, 3963149]), 1116179),\n",
-       " (array([3455748, 3814861]), array([3316341, 3328308]), 625960)]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from aocd import get_data, submit\n",
     "import re\n",
     "import numpy as np\n",
     "\n",
-    "data = \"\"\"Sensor at x=2, y=18: closest beacon is at x=-2, y=15\n",
-    "Sensor at x=9, y=16: closest beacon is at x=10, y=16\n",
-    "Sensor at x=13, y=2: closest beacon is at x=15, y=3\n",
-    "Sensor at x=12, y=14: closest beacon is at x=10, y=16\n",
-    "Sensor at x=10, y=20: closest beacon is at x=10, y=16\n",
-    "Sensor at x=14, y=17: closest beacon is at x=10, y=16\n",
-    "Sensor at x=8, y=7: closest beacon is at x=2, y=10\n",
-    "Sensor at x=2, y=0: closest beacon is at x=2, y=10\n",
-    "Sensor at x=0, y=11: closest beacon is at x=2, y=10\n",
-    "Sensor at x=20, y=14: closest beacon is at x=25, y=17\n",
-    "Sensor at x=17, y=20: closest beacon is at x=21, y=22\n",
-    "Sensor at x=16, y=7: closest beacon is at x=15, y=3\n",
-    "Sensor at x=14, y=3: closest beacon is at x=15, y=3\n",
-    "Sensor at x=20, y=1: closest beacon is at x=15, y=3\"\"\"\n",
     "data = get_data(year=2022, day=15)\n",
     "\n",
     "dist = lambda p1, p2: int(np.linalg.norm(p1-p2, 1))\n",
@@ -94,13 +41,12 @@
     "data = [re.findall(r\"=([-\\d]*)\", line) for line in data]\n",
     "data = [list(map(int, d)) for d in data]\n",
     "data = [[np.array([d[0], d[1]]), np.array([d[2], d[3]])] for d in data]\n",
-    "data = [(p, b, dist(p, b)) for p,b in data]\n",
-    "data"
+    "data = [(p, b, dist(p, b)) for p,b in data]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "id": "f44cd90f",
    "metadata": {},
    "outputs": [
@@ -110,7 +56,7 @@
        "[range(-4, 0), range(1, 103)]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,21 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 29,
    "id": "ede7358a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[range(-10, -7), range(-4, 12), range(13, 15)]"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = [range(5), range(10, 12), range(-4, 10), range(13, 15), range(-10, -7)]\n",
     "def overlap_ranges(ranges):\n",
@@ -158,14 +93,12 @@
     "        else: \n",
     "            l = res[0]\n",
     "    output.append(l)\n",
-    "    return output\n",
-    "\n",
-    "overlap_ranges(x)"
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 30,
    "id": "2f729792",
    "metadata": {},
    "outputs": [],
@@ -184,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
    "id": "7ed1a333",
    "metadata": {},
    "outputs": [
@@ -194,15 +127,33 @@
        "5511201"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ranges_for_row(2000000)\n",
+    "coverage = ranges_for_row(2000000)[0]\n",
     "answer = coverage.stop - coverage.start - 1\n",
     "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f9bfd87e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part a already solved with same answer: 5511201\n"
+     ]
+    }
+   ],
+   "source": [
+    "submit(answer, year=2022, part=\"a\", day=15)"
    ]
   },
   {
@@ -215,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "id": "76bb900f",
    "metadata": {},
    "outputs": [
@@ -223,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "286 ms ± 1.83 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "284 ms ± 9.41 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -241,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "id": "84f4981f",
    "metadata": {},
    "outputs": [],
@@ -262,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 35,
    "id": "b857463a",
    "metadata": {},
    "outputs": [
@@ -275,7 +226,7 @@
        "<POLYGON ((1763269 -459029, 1436312 -132072, 393374 -1175010, -1478535 69689...>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,29 +237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 36,
    "id": "117c9e26",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array('d', [2829680.0, 2829681.0, 2829680.0, 2829679.0, 2829680.0]),\n",
-       " array('d', [3411839.0, 3411840.0, 3411841.0, 3411840.0, 3411839.0]))"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p.interiors[0].coords.xy"
+    "def get_middle(coords):\n",
+    "    coords = list(set(coords))\n",
+    "    coords.sort()\n",
+    "    return int(coords[len(coords)//2])\n",
+    "int_x, int_y = all_coverages.interiors[0].coords.xy\n",
+    "beacon_x = get_middle(int_x)\n",
+    "beacon_y = get_middle(int_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "id": "20df2569",
    "metadata": {},
    "outputs": [
@@ -318,23 +263,33 @@
        "11318723411840"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "answer = 2829680*4000000 + 3411840\n",
+    "answer = beacon_x*4000000 + beacon_y\n",
     "answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "3440b335",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part b already solved with same answer: 11318723411840\n"
+     ]
+    }
+   ],
+   "source": [
+    "submit(answer, year=2022, part=\"b\", day=15)"
+   ]
   }
  ],
  "metadata": {
