small refactor day 12

--- a/2023/day12.ipynb
+++ b/2023/day12.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -46,22 +46,22 @@
     "        new_cache = defaultdict(int)\n",
     "\n",
     "        for key, paths in cache.items():\n",
-    "            slots, to_fit = key\n",
-    "            if sum(to_fit) > len(slots):\n",
+    "            slots_left, to_fit = key\n",
+    "            if sum(to_fit) > len(slots_left):\n",
     "                break\n",
-    "            if slots[0] != \"#\":\n",
-    "                new_cache[(slots[1:], to_fit)] += paths\n",
+    "            if slots_left[0] != \"#\":\n",
+    "                new_cache[(slots_left[1:], to_fit)] += paths\n",
     "\n",
-    "            if all(c in [\"#\", \"?\"] for c in slots[:to_fit[0]]):\n",
+    "            if all(c in [\"#\", \"?\"] for c in slots_left[:to_fit[0]]):\n",
     "                if len(to_fit) == 1:\n",
     "                    # check if no '#' left after last fit\n",
-    "                    if all(c != \"#\" for c in slots[to_fit[0]:]):\n",
+    "                    if all(c != \"#\" for c in slots_left[to_fit[0]:]):\n",
     "                        output += paths\n",
     "\n",
     "                 # check for '.' directly after fit\n",
-    "                elif slots[to_fit[0]] in [\".\", \"?\"]:\n",
+    "                elif slots_left[to_fit[0]] in [\".\", \"?\"]:\n",
     "                    # add + 1 index here for the '.' after match\n",
-    "                    new_cache[(slots[to_fit[0] + 1:], to_fit[1:])] += paths\n",
+    "                    new_cache[(slots_left[to_fit[0] + 1:], to_fit[1:])] += paths\n",
     "\n",
     "        if not new_cache:\n",
     "            break\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "outputs": [
     {
      "name": "stdout",
@@ -107,6 +107,25 @@
    "source": [
     "answer = sum(fit_combinations(\"?\".join(d[0] for _ in range(5)), d[1]*5) for d in data)\n",
     "submit(answer, part=\"b\", year=year, day=day)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "238 ms ± 898 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum(fit_combinations(\"?\".join(d[0] for _ in range(5)), d[1]*5) for d in data)"
    ],
    "metadata": {
     "collapsed": false
