--- a/2023/day14.ipynb
+++ b/2023/day14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 182,
    "outputs": [],
    "source": [
     "year = 2023\n",
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 183,
    "outputs": [
     {
      "data": {
       "text/plain": "array([['.', '.', '#', ..., '#', '.', '.'],\n       ['.', 'O', '.', ..., '.', '.', '.'],\n       ['.', '.', '.', ..., 'O', '.', '.'],\n       ...,\n       ['O', '.', '.', ..., '.', 'O', 'O'],\n       ['.', '#', '.', ..., '.', 'O', '.'],\n       ['.', 'O', '.', ..., '.', 'O', '.']], dtype='<U1')"
      },
-     "execution_count": 68,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,8 +36,7 @@
     "\n",
     "data = data.strip()\n",
     "data = data.split(\"\\n\")\n",
-    "# data = data.split(\"\\n\\n\")\n",
-    "# data = [np.array([list(line) for line in d.split(\"\\n\")]) for d in data]\n",
+    "\n",
     "data = [list(line) for line in data]\n",
     "data = np.array(data)\n",
     "data"
@@ -48,65 +47,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([['.', '.', '#', ..., '#', '.', '.'],\n       ['.', 'O', '.', ..., '.', '.', '.'],\n       ['.', '.', '.', ..., 'O', '.', '.'],\n       ...,\n       ['O', '.', '.', ..., '.', 'O', 'O'],\n       ['.', '#', '.', ..., '.', 'O', '.'],\n       ['.', 'O', '.', ..., '.', 'O', '.']], dtype='<U1')"
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "def tilt(data, direction):\n",
-    "    H, W = data.shape\n",
-    "\n",
-    "    if direction == \"N\":\n",
-    "        offset = (-1, 0)\n",
-    "        coord_order = [(y, x) for y in range(1, H) for x in range(W)]\n",
-    "    elif direction == \"S\":\n",
-    "        offset = (1, 0)\n",
-    "        coord_order = [(y, x) for y in range(H-2, -1, -1) for x in range(W)]\n",
-    "    elif direction == \"E\":\n",
-    "        offset = (0, 1)\n",
-    "        coord_order = [(y, x) for x in range(W-2, -1, -1) for y in range(H)]\n",
-    "    elif direction == \"W\":\n",
-    "        offset = (0, -1)\n",
-    "        coord_order = [(y, x) for x in range(1, W) for y in range(H)]\n",
-    "    else:\n",
-    "        raise ValueError(\"Invalid direction\")\n",
-    "\n",
-    "    moving = True\n",
-    "    while moving:\n",
-    "        moving = False\n",
-    "        for y, x in coord_order:\n",
-    "                if data[y, x] == \"O\" and data[y+offset[0], x+offset[1]] == \".\":\n",
-    "                    moving = True\n",
-    "                    data[y+offset[0], x+offset[1]] = \"O\"\n",
-    "                    data[y, x] = \".\"\n",
-    "    return data\n",
-    "\n",
-    "data"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 192,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def tilt(data, direction):\n",
+    "    while True:\n",
+    "        if direction == \"N\":\n",
+    "            mask = (data[:-1] == \".\") & (data[1:, :] == \"O\")\n",
+    "            move_to = np.vstack((mask, np.full((1,data.shape[1]), False)))\n",
+    "            move_from = np.vstack((np.full((1,data.shape[1]), False), mask))\n",
+    "        elif direction == \"S\":\n",
+    "            mask = (data[1:] == \".\") & (data[:-1, :] == \"O\")\n",
+    "            move_to = np.vstack((np.full((1,data.shape[1]), False), mask))\n",
+    "            move_from = np.vstack((mask, np.full((1,data.shape[1]), False)))\n",
+    "        elif direction == \"E\":\n",
+    "            mask = (data[:, 1:] == \".\") & (data[:, :-1] == \"O\")\n",
+    "            move_to = np.hstack((np.full((data.shape[0], 1), False), mask))\n",
+    "            move_from = np.hstack((mask, np.full((data.shape[0], 1), False)))\n",
+    "        elif direction == \"W\":\n",
+    "            mask = (data[:, :-1] == \".\") & (data[:, 1:] == \"O\")\n",
+    "            move_to = np.hstack((mask, np.full((data.shape[0], 1), False)))\n",
+    "            move_from = np.hstack((np.full((data.shape[0], 1), False), mask))\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unknown direction {direction}\")\n",
+    "        if not np.any(mask):\n",
+    "            break\n",
+    "        data[move_from] = \".\"\n",
+    "        data[move_to] = \"O\"\n",
+    "\n",
+    "    return data"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 193,
    "outputs": [],
    "source": [
     "def calculate_score(data):\n",
@@ -124,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 194,
    "outputs": [
     {
      "name": "stdout",
@@ -145,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 195,
    "outputs": [],
    "source": [
     "def cycle(data):\n",
@@ -161,19 +138,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([['.', '.', '.', '.', '.', '#', '.', '.', '.', '.'],\n       ['.', '.', '.', '.', '#', '.', '.', '.', 'O', '#'],\n       ['.', '.', '.', 'O', 'O', '#', '#', '.', '.', '.'],\n       ['.', 'O', 'O', '#', '.', '.', '.', '.', '.', '.'],\n       ['.', '.', '.', '.', '.', 'O', 'O', 'O', '#', '.'],\n       ['.', 'O', '#', '.', '.', '.', 'O', '#', '.', '#'],\n       ['.', '.', '.', '.', 'O', '#', '.', '.', '.', '.'],\n       ['.', '.', '.', '.', '.', '.', 'O', 'O', 'O', 'O'],\n       ['#', '.', '.', '.', 'O', '#', '#', '#', '.', '.'],\n       ['#', '.', '.', 'O', 'O', '#', '.', '.', '.', '.']], dtype='<U1')"
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 196,
+   "outputs": [],
    "source": [
-    "cycle(data.copy())"
+    "def find_repeats(seq):\n",
+    "    # start from 2 to fix issue with repeating score but not repeating board\n",
+    "    for i in range(2, len(seq) // 2):\n",
+    "        if seq[-i:] == seq[-2*i:-i]:\n",
+    "            return i\n",
+    "    return None"
    ],
    "metadata": {
     "collapsed": false
@@ -181,28 +154,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 197,
    "outputs": [],
    "source": [
-    "def cycle_until_stable(data):\n",
+    "# MAX_TRIES is a heuristic to prevent it looping too long\n",
+    "MAX_TRIES = 200\n",
+    "def cycle_until_repeats(data):\n",
     "    scores = []\n",
-    "    for i in range(150):\n",
+    "    for i in range(MAX_TRIES):\n",
     "        s = calculate_score(data)\n",
-    "        print(i, i%9, s)\n",
+    "        print(i, s)\n",
     "        data = cycle(data)\n",
-    "        if s in scores:\n",
-    "            return scores\n",
+    "        # bit of an assumption here:\n",
+    "        # we want to detect repeating patterns in the board positions.\n",
+    "        # we do this by detection repeating patterns in board score,\n",
+    "        # but board score is not a unique hash of board position.\n",
+    "        if cyc := find_repeats(scores):\n",
+    "            return cyc, scores\n",
     "        scores.append(s)\n",
-    "    return scores\n"
+    "    return 0, scores\n"
    ],
    "metadata": {
     "collapsed": false
@@ -210,98 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 105314\n",
-      "1 1 104345\n",
-      "2 2 104167\n",
-      "3 3 103875\n",
-      "4 4 103585\n",
-      "5 5 103442\n",
-      "6 6 103254\n",
-      "7 7 103071\n",
-      "8 8 102834\n",
-      "9 0 102569\n",
-      "10 1 102275\n",
-      "11 2 102022\n",
-      "12 3 101737\n",
-      "13 4 101517\n",
-      "14 5 101336\n",
-      "15 6 101159\n",
-      "16 7 100999\n",
-      "17 8 100857\n",
-      "18 0 100681\n",
-      "19 1 100541\n",
-      "20 2 100341\n",
-      "21 3 100177\n",
-      "22 4 100002\n",
-      "23 5 99835\n",
-      "24 6 99657\n",
-      "25 7 99495\n",
-      "26 8 99299\n",
-      "27 0 99138\n",
-      "28 1 98971\n",
-      "29 2 98821\n",
-      "30 3 98651\n",
-      "31 4 98491\n",
-      "32 5 98291\n",
-      "33 6 98128\n",
-      "34 7 97958\n",
-      "35 8 97819\n",
-      "36 0 97662\n",
-      "37 1 97540\n",
-      "38 2 97391\n",
-      "39 3 97267\n",
-      "40 4 97129\n",
-      "41 5 97037\n",
-      "42 6 96934\n",
-      "43 7 96858\n",
-      "44 8 96773\n",
-      "45 0 96736\n",
-      "46 1 96663\n",
-      "47 2 96626\n",
-      "48 3 96573\n",
-      "49 4 96580\n",
-      "50 5 96583\n",
-      "51 6 96622\n",
-      "52 7 96647\n",
-      "53 8 96681\n",
-      "54 0 96704\n",
-      "55 1 96760\n",
-      "56 2 96807\n",
-      "57 3 96864\n",
-      "58 4 96888\n",
-      "59 5 96899\n",
-      "60 6 96898\n",
-      "61 7 96859\n",
-      "62 8 96813\n",
-      "63 0 96776\n",
-      "64 1 96765\n",
-      "65 2 96770\n",
-      "66 3 96849\n",
-      "67 4 96963\n",
-      "68 5 97051\n",
-      "69 6 97150\n",
-      "70 7 97218\n",
-      "71 8 97277\n",
-      "72 0 97277\n"
-     ]
-    }
-   ],
-   "source": [
-    "stable = cycle_until_stable(data.copy())"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 198,
    "outputs": [
     {
      "name": "stdout",
@@ -316,153 +195,124 @@
       "6 103254\n",
       "7 103071\n",
       "8 102834\n",
-      "0 102569\n",
-      "1 102275\n",
-      "2 102022\n",
-      "3 101737\n",
-      "4 101517\n",
-      "5 101336\n",
-      "6 101159\n",
-      "7 100999\n",
-      "8 100857\n",
-      "0 100681\n",
-      "1 100541\n",
-      "2 100341\n",
-      "3 100177\n",
-      "4 100002\n",
-      "5 99835\n",
-      "6 99657\n",
-      "7 99495\n",
-      "8 99299\n",
-      "0 99138\n",
-      "1 98971\n",
-      "2 98821\n",
-      "3 98651\n",
-      "4 98491\n",
-      "5 98291\n",
-      "6 98128\n",
-      "7 97958\n",
-      "8 97819\n",
-      "0 97662\n",
-      "1 97540\n",
-      "2 97391\n",
-      "3 97267\n",
-      "4 97129\n",
-      "5 97037\n",
-      "6 96934\n",
-      "7 96858\n",
-      "8 96773\n",
-      "0 96736\n",
-      "1 96663\n",
-      "2 96626\n",
-      "3 96573\n",
-      "4 96580\n",
-      "5 96583\n",
-      "6 96622\n",
-      "7 96647\n",
-      "8 96681\n",
-      "0 96704\n",
-      "1 96760\n",
-      "2 96807\n",
-      "3 96864\n",
-      "4 96888\n",
-      "5 96899\n",
-      "6 96898\n",
-      "7 96859\n",
-      "8 96813\n",
-      "0 96776\n",
-      "1 96765\n",
-      "2 96770\n",
-      "3 96849\n",
-      "4 96963\n",
-      "5 97051\n",
-      "6 97150\n",
-      "7 97218\n",
-      "8 97277\n",
-      "0 97277\n",
-      "1 97257\n",
-      "2 97202\n",
-      "3 97170\n",
-      "4 97161\n",
-      "5 97153\n",
-      "6 97149\n",
-      "7 97156\n",
-      "8 97137\n",
-      "0 97121\n",
-      "1 97072\n",
-      "2 97042\n",
-      "3 96986\n",
-      "4 96921\n",
-      "5 96852\n",
-      "6 96780\n",
-      "7 96714\n",
-      "8 96643\n",
-      "0 96566\n",
-      "1 96500\n",
-      "2 96432\n",
-      "3 96359\n",
-      "4 96276\n",
-      "5 96215\n",
-      "6 96174\n",
-      "7 96121\n",
-      "8 96079\n",
-      "0 96044\n",
-      "1 96014\n",
-      "2 95990\n",
-      "3 95972\n",
-      "4 95962\n",
-      "5 95961\n",
-      "6 95981\n",
-      "7 96001\n",
-      "8 96020\n",
-      "0 96014\n",
-      "1 96003\n",
-      "2 95985\n",
-      "3 95971\n",
-      "4 95962\n",
-      "5 95961\n",
-      "6 95981\n",
-      "7 96001\n",
-      "8 96020\n",
-      "0 96014\n",
-      "1 96003\n",
-      "2 95985\n",
-      "3 95971\n",
-      "4 95962\n",
-      "5 95961\n",
-      "6 95981\n",
-      "7 96001\n",
-      "8 96020\n",
-      "0 96014\n",
-      "1 96003\n",
-      "2 95985\n",
-      "3 95971\n",
-      "4 95962\n",
-      "5 95961\n",
-      "6 95981\n",
-      "7 96001\n",
-      "8 96020\n",
-      "0 96014\n",
-      "1 96003\n",
-      "2 95985\n",
-      "3 95971\n",
-      "4 95962\n",
-      "5 95961\n",
-      "6 95981\n",
-      "7 96001\n",
-      "8 96020\n",
-      "0 96014\n",
-      "1 96003\n",
-      "2 95985\n",
-      "3 95971\n",
-      "4 95962\n",
-      "5 95961\n"
+      "9 102569\n",
+      "10 102275\n",
+      "11 102022\n",
+      "12 101737\n",
+      "13 101517\n",
+      "14 101336\n",
+      "15 101159\n",
+      "16 100999\n",
+      "17 100857\n",
+      "18 100681\n",
+      "19 100541\n",
+      "20 100341\n",
+      "21 100177\n",
+      "22 100002\n",
+      "23 99835\n",
+      "24 99657\n",
+      "25 99495\n",
+      "26 99299\n",
+      "27 99138\n",
+      "28 98971\n",
+      "29 98821\n",
+      "30 98651\n",
+      "31 98491\n",
+      "32 98291\n",
+      "33 98128\n",
+      "34 97958\n",
+      "35 97819\n",
+      "36 97662\n",
+      "37 97540\n",
+      "38 97391\n",
+      "39 97267\n",
+      "40 97129\n",
+      "41 97037\n",
+      "42 96934\n",
+      "43 96858\n",
+      "44 96773\n",
+      "45 96736\n",
+      "46 96663\n",
+      "47 96626\n",
+      "48 96573\n",
+      "49 96580\n",
+      "50 96583\n",
+      "51 96622\n",
+      "52 96647\n",
+      "53 96681\n",
+      "54 96704\n",
+      "55 96760\n",
+      "56 96807\n",
+      "57 96864\n",
+      "58 96888\n",
+      "59 96899\n",
+      "60 96898\n",
+      "61 96859\n",
+      "62 96813\n",
+      "63 96776\n",
+      "64 96765\n",
+      "65 96770\n",
+      "66 96849\n",
+      "67 96963\n",
+      "68 97051\n",
+      "69 97150\n",
+      "70 97218\n",
+      "71 97277\n",
+      "72 97277\n",
+      "73 97257\n",
+      "74 97202\n",
+      "75 97170\n",
+      "76 97161\n",
+      "77 97153\n",
+      "78 97149\n",
+      "79 97156\n",
+      "80 97137\n",
+      "81 97121\n",
+      "82 97072\n",
+      "83 97042\n",
+      "84 96986\n",
+      "85 96921\n",
+      "86 96852\n",
+      "87 96780\n",
+      "88 96714\n",
+      "89 96643\n",
+      "90 96566\n",
+      "91 96500\n",
+      "92 96432\n",
+      "93 96359\n",
+      "94 96276\n",
+      "95 96215\n",
+      "96 96174\n",
+      "97 96121\n",
+      "98 96079\n",
+      "99 96044\n",
+      "100 96014\n",
+      "101 95990\n",
+      "102 95972\n",
+      "103 95962\n",
+      "104 95961\n",
+      "105 95981\n",
+      "106 96001\n",
+      "107 96020\n",
+      "108 96014\n",
+      "109 96003\n",
+      "110 95985\n",
+      "111 95971\n",
+      "112 95962\n",
+      "113 95961\n",
+      "114 95981\n",
+      "115 96001\n",
+      "116 96020\n",
+      "117 96014\n",
+      "118 96003\n",
+      "119 95985\n",
+      "120 95971\n",
+      "121 95962\n"
      ]
     }
    ],
    "source": [
-    "for i, s in enumerate(stable):\n",
-    "    print(i%9, s)"
+    "cycle_len, scores = cycle_until_repeats(data.copy())"
    ],
    "metadata": {
     "collapsed": false
@@ -470,30 +320,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 199,
    "outputs": [
     {
      "data": {
-      "text/plain": "1"
+      "text/plain": "96003"
      },
-     "execution_count": 77,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1_000_000_000 % 9\n",
-    "answer = 96003"
+    "\n",
+    "offset = len(scores) % cycle_len\n",
+    "answer_idx = 1_000_000_000 % cycle_len\n",
+    "answer = scores[-cycle_len+(answer_idx-offset)%cycle_len]\n"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
