--- a/2023/day24.ipynb
+++ b/2023/day24.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "year = 2023\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
-      "text/plain": "[[291493672529314, 259618209733833, 379287136024123, -9, 119, -272],\n [308409248682955, 156803514643857, 424989308414284, -78, 236, -255],\n [195379943194796, 213851381371727, 355270583377422, 25, 14, -15],\n [297329579961934, 122004770593749, 344090716183747, -87, 185, -36],\n [295385164557865, 339802914312939, 293784344149228, 64, 10, -211]]"
+      "text/plain": "[291493672529314, 259618209733833, 379287136024123, -9, 119, -272]"
      },
-     "execution_count": 265,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
     "data = data.strip()\n",
     "data = data.split(\"\\n\")\n",
     "data = [list(map(int, d.replace(\"@\", \"\").replace(\",\", \"\").split())) for d in data]\n",
-    "data[:5]"
+    "data[0]"
    ],
    "metadata": {
     "collapsed": false
@@ -77,10 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 27,
    "outputs": [],
    "source": [
-    "def solve(left, right):\n",
+    "def solve_lines(left, right):\n",
     "    a, b, c, d = left[3], left[0], right[3], right[0]\n",
     "    e, f, g, h = left[4], left[1], right[4], right[1]\n",
     "    try:\n",
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "def check(l, r):\n",
-    "    x, y, t1, t2 = solve(l, r)\n",
+    "    x, y, t1, t2 = solve_lines(l, r)\n",
     "    if not x:\n",
     "        return False\n",
     "    return (left_bound <= x <= right_bound) and (left_bound <= y <= right_bound) and (t1 >= 0) and (t2 >= 0)"
@@ -118,208 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "17776"
-     },
-     "execution_count": 268,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from itertools import combinations\n",
-    "\n",
-    "sum([check(l, r) for l, r in combinations(data, 2)])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 269,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{t1: (-b*g + c*f - c*h + d*g)/(a*g - c*e),\n t2: (a*f - a*h - b*e + d*e)/(a*g - c*e)}"
-     },
-     "execution_count": 269,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sympy import solve, Symbol\n",
-    "\n",
-    "t1 = Symbol(\"t1\")\n",
-    "t2 = Symbol(\"t2\")\n",
-    "a = Symbol(\"a\")\n",
-    "b = Symbol(\"b\")\n",
-    "c = Symbol(\"c\")\n",
-    "d = Symbol(\"d\")\n",
-    "e = Symbol(\"e\")\n",
-    "f = Symbol(\"f\")\n",
-    "g = Symbol(\"g\")\n",
-    "h = Symbol(\"h\")\n",
-    "\n",
-    "solve([t1 * a + b - (t2 * c + d), t1 * e + f - (t2 * g + h)], [t1, t2])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 270,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{delta: (a1*b2*d1 - a1*beta*d1 - a2*b1*d2 + a2*beta*d2 + alpha*b1*d2 - alpha*b2*d1 + alpha*beta*d1 - alpha*beta*d2 - b1*b2*c1 + b1*b2*c2 + b1*beta*c1 - b1*beta*c2 + b2*beta*c1 - b2*beta*c2 - beta**2*c1 + beta**2*c2)/(a1*b2 - a1*beta - a2*b1 + a2*beta + alpha*b1 - alpha*b2),\n t1: (a2*d1 - a2*d2 - alpha*d1 + alpha*d2 - b2*c1 + b2*c2 + beta*c1 - beta*c2)/(a1*b2 - a1*beta - a2*b1 + a2*beta + alpha*b1 - alpha*b2),\n t2: (a1*d1 - a1*d2 - alpha*d1 + alpha*d2 - b1*c1 + b1*c2 + beta*c1 - beta*c2)/(a1*b2 - a1*beta - a2*b1 + a2*beta + alpha*b1 - alpha*b2),\n upsilon: (a1*a2*d1 - a1*a2*d2 - a1*alpha*d1 + a1*alpha*d2 + a1*b2*c2 - a1*beta*c2 - a2*alpha*d1 + a2*alpha*d2 - a2*b1*c1 + a2*beta*c1 + alpha**2*d1 - alpha**2*d2 + alpha*b1*c1 - alpha*b2*c2 - alpha*beta*c1 + alpha*beta*c2)/(a1*b2 - a1*beta - a2*b1 + a2*beta + alpha*b1 - alpha*b2)}"
-     },
-     "execution_count": 270,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sympy import solve, Symbol\n",
-    "\n",
-    "t1 = Symbol(\"t1\")\n",
-    "t2 = Symbol(\"t2\")\n",
-    "a1 = Symbol(\"a1\")\n",
-    "b1 = Symbol(\"b1\")\n",
-    "c1 = Symbol(\"c1\")\n",
-    "d1 = Symbol(\"d1\")\n",
-    "a2 = Symbol(\"a2\")\n",
-    "b2 = Symbol(\"b2\")\n",
-    "c2 = Symbol(\"c2\")\n",
-    "d2 = Symbol(\"d2\")\n",
-    "\n",
-    "alpha = Symbol(\"alpha\")\n",
-    "beta = Symbol(\"beta\")\n",
-    "upsilon = Symbol(\"upsilon\")\n",
-    "delta = Symbol(\"delta\")\n",
-    "\n",
-    "sol = solve([a1 * t1 + c1 - (alpha * t1 + upsilon),\n",
-    "             b1 * t1 + d1 - (beta * t1 + delta),\n",
-    "             a2 * t2 + c2 - (alpha * t2 + upsilon),\n",
-    "             b2 * t2 + d2 - (beta * t2 + delta)],\n",
-    "            [t1,\n",
-    "             t2,\n",
-    "             delta,\n",
-    "             upsilon])\n",
-    "sol"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 271,
-   "outputs": [],
-   "source": [
-    "compute_delta = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[delta])\n",
-    "compute_upsilon = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[upsilon])\n",
-    "compute_t1 = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[t1])\n",
-    "compute_t2 = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[t2])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
-   "outputs": [],
-   "source": [
-    "compute_delta = lambda a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta: (\n",
-    "                                                                            a1 * b2 * d1 - a1 * beta * d1 - a2 * b1 * d2 + a2 * beta * d2 + alpha * b1 * d2 - alpha * b2 * d1 + alpha * beta * d1 - alpha * beta * d2 - b1 * b2 * c1 + b1 * b2 * c2 + b1 * beta * c1 - b1 * beta * c2 + b2 * beta * c1 - b2 * beta * c2 - beta ** 2 * c1 + beta ** 2 * c2) / (\n",
-    "                                                                            a1 * b2 - a1 * beta - a2 * b1 + a2 * beta + alpha * b1 - alpha * b2)\n",
-    "\n",
-    "compute_t1 = lambda a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta: (\n",
-    "                                                                         a2 * d1 - a2 * d2 - alpha * d1 + alpha * d2 - b2 * c1 + b2 * c2 + beta * c1 - beta * c2) / (\n",
-    "                                                                         a1 * b2 - a1 * beta - a2 * b1 + a2 * beta + alpha * b1 - alpha * b2)\n",
-    "\n",
-    "compute_t2 = lambda a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta: (\n",
-    "                                                                         a1 * d1 - a1 * d2 - alpha * d1 + alpha * d2 - b1 * c1 + b1 * c2 + beta * c1 - beta * c2) / (\n",
-    "                                                                         a1 * b2 - a1 * beta - a2 * b1 + a2 * beta + alpha * b1 - alpha * b2)\n",
-    "\n",
-    "compute_upsilon = lambda a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta: (\n",
-    "                                                                              a1 * a2 * d1 - a1 * a2 * d2 - a1 * alpha * d1 + a1 * alpha * d2 + a1 * b2 * c2 - a1 * beta * c2 - a2 * alpha * d1 + a2 * alpha * d2 - a2 * b1 * c1 + a2 * beta * c1 + alpha ** 2 * d1 - alpha ** 2 * d2 + alpha * b1 * c1 - alpha * b2 * c2 - alpha * beta * c1 + alpha * beta * c2) / (\n",
-    "                                                                              a1 * b2 - a1 * beta - a2 * b1 + a2 * beta + alpha * b1 - alpha * b2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha: -193, beta: -230 upsilon: 370994826025810 delta: 410411158485339 t1: 805572857023.0 t2: 694955151546.0\n"
+      "Part a already solved with same answer: 17776\n"
      ]
     }
    ],
    "source": [
-    "SEARCH_RANGE = 300\n",
-    "for alpha in range(-SEARCH_RANGE, SEARCH_RANGE):\n",
-    "    for beta in range(-SEARCH_RANGE, SEARCH_RANGE):\n",
+    "from itertools import combinations\n",
     "\n",
-    "        deltas = []\n",
-    "        upsilons = []\n",
-    "\n",
-    "        N = 3\n",
-    "\n",
-    "        for i in range(N):\n",
-    "\n",
-    "            l, r = data[i], data[i + 1]\n",
-    "            a1, b1, c1, d1, e1, f1 = l[3], l[4], l[0], l[1], l[5], l[2]\n",
-    "            a2, b2, c2, d2, e2, f2 = r[3], r[4], r[0], r[1], r[5], r[2]\n",
-    "\n",
-    "            try:\n",
-    "                delta = compute_delta(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
-    "                upsilon = compute_upsilon(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
-    "            except ZeroDivisionError:\n",
-    "                continue\n",
-    "\n",
-    "            deltas.append(delta)\n",
-    "            upsilons.append(upsilon)\n",
-    "\n",
-    "        if np.ptp(deltas) < 0.001 and np.ptp(upsilons) < 0.001 and len(deltas) == N:\n",
-    "            t1 = compute_t1(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
-    "            t2 = compute_t2(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
-    "            print(f\"alpha: {alpha}, beta: {beta} upsilon: {int(upsilon)} delta: {int(delta)} t1: {t1} t2: {t2}\")\n",
-    "            sol_variables = {\n",
-    "                \"alpha\": alpha,\n",
-    "                \"beta\": beta,\n",
-    "                \"upsilon\": upsilon,\n",
-    "                \"delta\": delta,\n",
-    "                \"t1\": t1,\n",
-    "                \"t2\": t2,\n",
-    "                \"a1\": a1,\n",
-    "                \"b1\": b1,\n",
-    "                \"c1\": c1,\n",
-    "                \"d1\": d1,\n",
-    "                \"e1\": e1,\n",
-    "                \"f1\": f1,\n",
-    "                \"a2\": a2,\n",
-    "                \"b2\": b2,\n",
-    "                \"c2\": c2,\n",
-    "                \"d2\": d2,\n",
-    "                \"e2\": e2,\n",
-    "                \"f2\": f2,\n",
-    "\n",
-    "            }\n",
-    "\n",
-    "        # print(alpha, beta, deltas, upsilons)"
+    "answer = sum([check(l, r) for l, r in combinations(data, 2)])\n",
+    "submit(answer, part=\"a\", year=year, day=day)"
    ],
    "metadata": {
     "collapsed": false
@@ -327,39 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'alpha': -193,\n 'beta': -230,\n 'upsilon': 370994826025810.0,\n 'delta': 410411158485339.0,\n 't1': 805572857023.0,\n 't2': 694955151546.0,\n 'a1': 25,\n 'b1': 14,\n 'c1': 195379943194796,\n 'd1': 213851381371727,\n 'e1': -15,\n 'f1': 355270583377422,\n 'a2': -87,\n 'b2': 185,\n 'c2': 297329579961934,\n 'd2': 122004770593749,\n 'e2': -36,\n 'f2': 344090716183747}"
-     },
-     "execution_count": 274,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sol_variables"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 275,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{epsilon: (-e1*t1*t2 + e2*t1*t2 - f1*t2 + f2*t1)/(t1 - t2),\n gamma: (e1*t1 - e2*t2 + f1 - f2)/(t1 - t2)}"
-     },
-     "execution_count": 275,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 30,
+   "outputs": [],
    "source": [
     "from sympy import solve, Symbol\n",
+    "from sympy.utilities.lambdify import lambdify\n",
     "\n",
     "t1 = Symbol(\"t1\")\n",
     "t2 = Symbol(\"t2\")\n",
@@ -385,13 +170,37 @@
     "\n",
     "sol = solve([a1 * t1 + c1 - (alpha * t1 + upsilon),\n",
     "             b1 * t1 + d1 - (beta * t1 + delta),\n",
+    "             a2 * t2 + c2 - (alpha * t2 + upsilon),\n",
+    "             b2 * t2 + d2 - (beta * t2 + delta)],\n",
+    "            [t1,\n",
+    "             t2,\n",
+    "             delta,\n",
+    "             upsilon])\n",
+    "\n",
+    "compute_delta = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[delta])\n",
+    "compute_upsilon = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[upsilon])\n",
+    "compute_t1 = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[t1])\n",
+    "compute_t2 = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[t2])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "sol2 = solve([a1 * t1 + c1 - (alpha * t1 + upsilon),\n",
+    "             b1 * t1 + d1 - (beta * t1 + delta),\n",
     "             e1 * t1 + f1 - (gamma * t1 + epsilon),\n",
     "             a2 * t2 + c2 - (alpha * t2 + upsilon),\n",
     "             b2 * t2 + d2 - (beta * t2 + delta),\n",
     "             e2 * t2 + f2 - (gamma * t2 + epsilon)\n",
     "             ],\n",
     "            [gamma, epsilon])\n",
-    "sol"
+    "compute_gamma = lambdify([e1, f1, e2, f2, t1, t2], sol2[gamma])\n",
+    "compute_epsilon = lambdify([e1, f1, e2, f2, t1, t2], sol2[epsilon])"
    ],
    "metadata": {
     "collapsed": false
@@ -399,52 +208,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
-   "outputs": [],
-   "source": [
-    "compute_epsilon = lambda e1, f1, e2, f2, t1, t2: (-e1 * t1 * t2 + e2 * t1 * t2 - f1 * t2 + f2 * t1) / (t1 - t2)\n",
-    "compute_gamma = lambda e1, f1, e2, f2, t1, t2: (e1 * t1 - e2 * t2 + f1 - f2) / (t1 - t2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 277,
-   "outputs": [],
-   "source": [
-    "sol_variables[\"epsilon\"] = compute_epsilon(sol_variables[\"e1\"], sol_variables[\"f1\"], sol_variables[\"e2\"], sol_variables[\"f2\"], sol_variables[\"t1\"], sol_variables[\"t2\"])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "outputs": [],
-   "source": [
-    "sol_variables[\"gamma\"] = compute_gamma(sol_variables[\"e1\"], sol_variables[\"f1\"], sol_variables[\"e2\"], sol_variables[\"f2\"], sol_variables[\"t1\"], sol_variables[\"t2\"])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha: -193, beta: -230, upsilon: 370994826025810, delta: 410411158485339, gamma: 218, epsilon: 167572107691063, t1: 805572857023.0, t2: 694955151546.0\n"
+      "alpha: -193, beta: -230 upsilon: 370994826025810 delta: 410411158485339 t1: 805572857023.0 t2: 694955151546.0 gamma: 218 epsilon: 167572107691063\n"
      ]
     }
    ],
    "source": [
-    "print(f\"alpha: {sol_variables['alpha']}, beta: {sol_variables['beta']}, upsilon: {int(sol_variables['upsilon'])}, delta: {int(sol_variables['delta'])}, gamma: {int(sol_variables['gamma'])}, epsilon: {int(sol_variables['epsilon'])}, t1: {sol_variables['t1']}, t2: {sol_variables['t2']}\")"
+    "from itertools import product\n",
+    "SEARCH_RANGE = 300\n",
+    "for alpha, beta in product(range(-SEARCH_RANGE, SEARCH_RANGE), range(-SEARCH_RANGE, SEARCH_RANGE)):\n",
+    "    # for beta in :\n",
+    "\n",
+    "    deltas = []\n",
+    "    upsilons = []\n",
+    "\n",
+    "    N = 3\n",
+    "\n",
+    "    for i in range(N):\n",
+    "\n",
+    "        l, r = data[i], data[i + 1]\n",
+    "        a1, b1, c1, d1, e1, f1 = l[3], l[4], l[0], l[1], l[5], l[2]\n",
+    "        a2, b2, c2, d2, e2, f2 = r[3], r[4], r[0], r[1], r[5], r[2]\n",
+    "\n",
+    "        try:\n",
+    "            delta = compute_delta(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
+    "            upsilon = compute_upsilon(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
+    "        except ZeroDivisionError:\n",
+    "            continue\n",
+    "\n",
+    "        deltas.append(delta)\n",
+    "        upsilons.append(upsilon)\n",
+    "\n",
+    "    if np.ptp(deltas) < 0.001 and np.ptp(upsilons) < 0.001 and len(deltas) == N:\n",
+    "        t1 = compute_t1(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
+    "        t2 = compute_t2(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
+    "\n",
+    "        gamma = compute_gamma(e1, f1, e2, f2, t1, t2)\n",
+    "        epsilon = compute_epsilon(e1, f1, e2, f2, t1, t2)\n",
+    "\n",
+    "        print(f\"alpha: {alpha}, beta: {beta} upsilon: {int(upsilon)} delta: {int(delta)} t1: {t1} t2: {t2} gamma: {int(gamma)} epsilon: {int(epsilon)}\")\n",
+    "\n",
+    "        break\n",
+    "else:\n",
+    "    print(f\"No solution found\")\n",
+    "\n",
+    "answer = int(upsilon + delta + epsilon)"
    ],
    "metadata": {
     "collapsed": false
@@ -452,91 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 33,
    "outputs": [
     {
-     "data": {
-      "text/plain": "948978092202212"
-     },
-     "execution_count": 280,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part b already solved with same answer: 948978092202212\n"
+     ]
     }
    ],
    "source": [
-    "int(sol_variables[\"upsilon\"] + sol_variables[\"delta\"] + sol_variables[\"epsilon\"])"
+    "submit(answer, part=\"b\", year=year, day=day)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 281,
-   "outputs": [],
-   "source": [
-    "from sympy.utilities.lambdify import lambdify"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 282,
-   "outputs": [],
-   "source": [
-    "r = lambdify([e1, f1, e2, f2, t1, t2], sol[epsilon])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 283,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "167572107691063.22"
-     },
-     "execution_count": 283,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r(sol_variables[\"e1\"], sol_variables[\"f1\"], sol_variables[\"e2\"], sol_variables[\"f2\"], sol_variables[\"t1\"], sol_variables[\"t2\"])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 284,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "167572107691063.22"
-     },
-     "execution_count": 284,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compute_epsilon(sol_variables[\"e1\"], sol_variables[\"f1\"], sol_variables[\"e2\"], sol_variables[\"f2\"], sol_variables[\"t1\"], sol_variables[\"t2\"])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 284,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
